fix alignment of options with their labels

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,7 @@ div.option {
 
 div.option > * {
     flex: 0 0 auto;
+    margin: .2em;
 }
 
 div.option > button {
